--- a/assets/wifi_setup/frontend/package.json
+++ b/assets/wifi_setup/frontend/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^3.10.0",
-    "@blueprintjs/table": "^3.3.0",
-    "@blueprintjs/tslint-config": "^1.7.0",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2",
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "@blueprintjs/core": "^3.23.1",
+    "@blueprintjs/table": "^3.8.3",
+    "@blueprintjs/tslint-config": "^2.0.0",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^13.5.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
