--- a/assets/wifi_setup/frontend/package.json
+++ b/assets/wifi_setup/frontend/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^3.23.1",
-    "@blueprintjs/table": "^3.8.3",
-    "@blueprintjs/tslint-config": "^2.0.0",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^13.5.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0",
-    "tslint": "^6.0.0",
-    "typescript": "^3.7.5"
+    "@blueprintjs/core": "^4.13.0",
+    "@blueprintjs/table": "^4.7.10",
+    "@blueprintjs/tslint-config": "^3.3.1",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.16",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +32,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://192.168.14.104"
+  "proxy": "http://192.168.14.104",
+  "devDependencies": {
+    "yarn-upgrade-all": "^0.7.1"
+  }
 }
